# article-improver-tutorial

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/article_improver/: __about__.py  __main__.py  chat_gpt.py  config.py  main.py  pdf.py
src/article_improver/cli/: __init__.py
src/article_improver/command/: config_command.py  seo.py
tests/: __init__.py  test_config.py  test_config.yaml  test_pdf.py
tests/command/: test_config_command.py
